# wdotool

./: CMakeLists.txt
cli/: CMakeLists.txt  input.cpp  input.h  tcpserver.cpp  wdotoold.c
conf/: wdotool.json  wdotoold.json
py/: wdotool_linux.py
wdotool/: wdotool_linux.py
